@@ -6,6 +6,9 @@ Version 5
 
 --Added tutorial bookmarking.
 
+--Rise marker sonar beat now modulated by path-finding distance instead of
+  crow-flies distance for better feedback.
+
 
 
 Version 4   2011-January-23
